--- a/package.json
+++ b/package.json
@@ -18,14 +18,19 @@
     "react": "18.2.0",
     "react-i18next": "^14.0.5",
     "react-native": "0.73.4",
+    "react-native-flip-card": "^3.5.7",
     "react-native-ionicons": "^4.6.5",
     "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0"
+    "react-native-screens": "~3.29.0",
+    "react-native-svg": "^15.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "@types/react-native-flip-card": "^3.5.7",
+    "babel-plugin-inline-import": "^3.0.0",
     "babel-plugin-module-resolver": "^5.0.0",
+    "react-native-svg-transformer": "^1.3.0",
     "typescript": "^5.1.3"
   },
   "private": true
