--- a/package.json
+++ b/package.json
@@ -26,11 +26,14 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@react-native-community/datetimepicker": "^7.6.2",
+    "@react-native-picker/picker": "^2.6.1",
     "@types/react": "~18.2.45",
     "@types/react-native-flip-card": "^3.5.7",
     "babel-plugin-inline-import": "^3.0.0",
     "babel-plugin-module-resolver": "^5.0.0",
     "react-native-svg-transformer": "^1.3.0",
+    "react-native-wheel-pick": "^1.2.2",
     "typescript": "^5.1.3"
   },
   "private": true
