--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@react-native-async-storage/async-storage": "^1.22.3",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
     "@react-navigation/stack": "^6.3.21",
+    "@types/react-native-snap-carousel": "^3.8.11",
     "expo": "~50.0.7",
     "expo-status-bar": "~1.11.1",
     "i18next": "^23.10.0",
@@ -22,6 +24,7 @@
     "react-native-ionicons": "^4.6.5",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^15.1.0"
   },
   "devDependencies": {
