--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native": "0.73.4",
     "react-native-flip-card": "^3.5.7",
     "react-native-ionicons": "^4.6.5",
+    "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-snap-carousel": "^3.9.1",
