--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
@@ -17,6 +18,7 @@
     "expo": "~50.0.7",
     "expo-status-bar": "~1.11.1",
     "i18next": "^23.10.0",
+    "patch-package": "^8.0.0",
     "react": "18.2.0",
     "react-i18next": "^14.0.5",
     "react-native": "0.73.4",
